...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-lK-ee6">
                                <rect key="frame" x="20" y="260" width="560" height="43"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zRc-oN-Kad">
                                <rect key="frame" x="20" y="311" width="560" height="43"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="46" id="lKk-CH-fpD"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VfX-QR-3ae"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="10u-XQ-VeS">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="vQE-Iq-bWC">
                            <connections>
                                <segue destination="o8a-E2-DZA" kind="show" identifier="settings" id="1oD-X7-Zej"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Delete account">
                                    <color key="titleColor" red="1" green="0.14987044882117151" blue="0.0064783578437522804" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="add email address here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9ww-lO-Kty">
                                <rect key="frame" x="42" y="195" width="516" height="43"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="add phone number here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jHh-ma-bKN">
                                <rect key="frame" x="42" y="144" width="516" height="43"/>
                                <constraints>
...
                                    <constraint firstAttribute="width" constant="322" id="oZV-zs-T6c"/>
                                </constraints>
                                <state key="normal" title="Sign out"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="height" constant="46" id="iA4-C6-3Wt"/>
                                </constraints>
                                <state key="normal" title="Change password"/>
                                <variation key="default">
                                    <mask key="constraints">
...
